--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./public
+          path: ./src/public
 
   # Deployment job
   deploy:
